--- a/02_login/index.html
+++ b/02_login/index.html
@@ -13,6 +13,11 @@
 <body>
 
     <div class="container">
+        <div class="bullets">
+
+            <div class="bullet"></div>
+            <div class="bullet1"></div>
+        </div>
         <div class="form-content">
             <form action="asd.php">
                 <fieldset>
@@ -26,6 +31,12 @@
 
                         <i class="fa fa-lock icon "></i>
                         <input type="text " name="password" id="pass">
+                    </div>
+                    <div style="text-align: right; padding-right:15px">
+                        <a href="register.html" class="link">Register</a>
+                    </div>
+                    <div class="inputForm">
+                        <input type="submit" value="Giriş" class="buton">
                     </div>
                 </fieldset>
 
