anket captcha 1A2B curl sayiOyun eklendi

--- a/06-jquery/index.html
+++ b/06-jquery/index.html
@@ -55,7 +55,11 @@
         </div>
       </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+      <p>asdasdasdasda</p>
+
+      <p id="bir"> Ayhan</p>
+      <p id="iki">İhsan</p>
+    <script src="jquery.js"></script>
 
     <script>
       $("#gizle").on("click" , function(){
@@ -83,6 +87,15 @@
       $("#sehir").on("change", function(){
         alert($("#sehir").val());
       })
+
+
+     $("p").on("click" , function(){
+  
+        $("#bir").hide();
+     })
     </script>
+
+
+
   </body>
 </html>
